--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gsap": "^3.9.1",
     "pinia": "^2.0.9",
     "postcss-extend": "^1.0.5",
+    "swiper": "^8.0.7",
     "vue": "^3.2.25",
     "vue-i18n": "^9.2.0-beta.26"
   },
