--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "postcss-extend": "^1.0.5",
     "swiper": "^8.0.7",
     "vue": "^3.2.25",
-    "vue-i18n": "^9.2.0-beta.26"
+    "vue-i18n": "^9.2.0-beta.26",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
