--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "pinia": "^2.0.9",
     "postcss-extend": "^1.0.5",
     "swiper": "^8.0.7",
+    "vee-validate": "^4.5.9",
     "vue": "^3.2.25",
     "vue-i18n": "^9.2.0-beta.26",
-    "vue-router": "4"
+    "vue-router": "4",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
