nginx.conf, fix / dir error

--- a/nginx.conf
+++ b/nginx.conf
@@ -19,7 +19,7 @@ http {
     server_name  localhost;
     location / {
       root   /app;
-      index  index.html;
+      index ubro/index.html index.html;
       try_files $uri $uri/ /ubro/index.html;
     }
     error_page   500 502 503 504  /50x.html;
